# Voting-dAPP

./: README.md
programs/voting/: Cargo.toml
programs/voting/src/: error.rs  lib.rs  utils.rs
programs/voting/src/instructions/: award_badge.rs  cast_vote.rs  close_poll.rs  create_poll.rs  initialize.rs  mod.rs  recast_vote.rs  vote_delegation.rs
programs/voting/src/state/: badge.rs  mod.rs  poll.rs  user.rs  vote.rs  voting.rs
