[package]
name = "voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bs58 = "0.5.1"
sha2 = "0.10.9"
solana-program = "2.3.0"
solana-program-test = "2.2.7"
solana-sdk = "2.3.0"
spl-associated-token-account = {version = "7.0.0", features = ["no-entrypoint"]}
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
tokio = "1.45.1"

